Fixed hover text flickering between white and black on property options

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -24,6 +24,10 @@
     margin: 2px;
 }
 
+.btn:focus.selected, .btn:hover.selected {
+    color: white;
+}
+
 
 .btn > .glyphicon {
     top: 2px;
@@ -84,6 +88,7 @@
 
 .selected {
     background-color: #428bca;
+    color: white;
 }
 
 .navbar {
